# machine-learning-process

./: .gitattributes  .gitignore  404.html  Describe-MLmodel.ipynb  README.md  Taskfile.yaml  codemeta.json  index.html  mkdocs.yaml  project.toml
.github/workflows/: build.yaml  docs.yml
MLM/: Describe-MLmodel.ipynb  README.md  environment.yml  pyproject.toml  utils.py
MLM/ML_Catalog/: catalog.json
MLM/ML_Catalog/ML-Models_EO/: collection.json
MLM/ML_Catalog/ML-Models_EO/Tile-based-ML-Models/: Tile-based-ML-Models.json
docs/: Describe-MLmodel.html  Describe-MLmodel.md  extract-model.md  hands-on.md  index.md  inference-container.md  inference-cwl.md  insights.md  mlm.md  packages.md  params.yaml  stage-in.md  training-container.md  training-cwl.md
hands-on/: index.html
inference/: README.md
inference-container/: index.html
inference-cwl/: index.html
inference/app-package/: README.md  params.yml  tile-sat-inference.cwl
inference/app-package/stage-in/: README.md  stage-in.sh  usersettings.json
inference/make-inference/: .dockerignore  .gitignore  Dockerfile  README.md  catalog.json  environment.yml  pyproject.toml  setup.cfg  setup.py
inference/make-inference/src/make_inference/: app.py  main.py  ml_helper.py
insights/: index.html
mlm/: index.html
mlruns/0/: meta.yaml
practice-labs/1-Application_Steps/: 1-training.ipynb  2-inference.ipynb
practice-labs/2-Containers/: 1-training.ipynb  2-inference.ipynb
practice-labs/3-CWL-CommandLineTools/: 1-training.ipynb
practice-labs/3-CWL-Workflows/: 1-training.ipynb  2-inference.ipynb  params_inference.yaml  params_training.yaml
practice-labs/4-CWL-Workflows/: 1-training.ipynb
practice-labs/Alternative1-Application_Steps/: 1-training.ipynb  Step1A-training.ipynb  Step1B-ExtractModel.ipynb  Step2-inference.ipynb
practice-labs/Alternative2-Containers/: 1-training.ipynb  2-inference.ipynb  Step1A-training.ipynb
practice-labs/Alternative3-CWL-Workflows/: Step1A-training.ipynb  Step2-inference.ipynb
search/: search_index.json
training-container/: index.html
training-cwl/: index.html
training/app-package/: ExtractModel.ipynb  README.md  params.yaml  tile-sat-training.cwl
training/app-package/EUROSAT-Training-Dataset/: catalog.json
training/app-package/EUROSAT-Training-Dataset/EUROSAT-Training-Dataset/: collection.json  euro-sat.parquet
training/make-ml-model/: Dockerfile  README.md  get_best_model.py  params.yaml  pyproject.toml
training/make-ml-model/config/: config.yaml
training/make-ml-model/mlruns/344477145423232258/: meta.yaml
training/make-ml-model/mlruns/344477145423232258/2bcf52203aaa490e9cfd11561a054dcb/: meta.yaml
training/make-ml-model/mlruns/344477145423232258/2bcf52203aaa490e9cfd11561a054dcb/metrics/: loss  test_precision
training/make-ml-model/mlruns/344477145423232258/2bcf52203aaa490e9cfd11561a054dcb/params/: stac_reference
training/make-ml-model/mlruns/344477145423232258/2bcf52203aaa490e9cfd11561a054dcb/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
training/make-ml-model/mlruns/models/CNN/: meta.yaml
training/make-ml-model/mlruns/models/CNN/version-1/: meta.yaml
training/make-ml-model/src/: __init__.py
training/make-ml-model/src/tile_based_training/: main.py
training/make-ml-model/src/tile_based_training/components/: data_ingestion.py  model_evaluation.py  prepare_base_model.py  train_model.py
training/make-ml-model/src/tile_based_training/config/: configuration.py  params.yaml
training/make-ml-model/src/tile_based_training/constants/: __init__.py  config.py
training/make-ml-model/src/tile_based_training/entity/: config_entity.py
training/make-ml-model/src/tile_based_training/output/data_ingestion/: splited_data.json  splitted_data.json
training/make-ml-model/src/tile_based_training/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
training/make-ml-model/src/tile_based_training/utils/: common.py
