[metadata]
name = make-inference
version = 1.0.0
description = Inference module for the Tile-Based classification on Sentinel-2 data
long_description = A trained CNN model performs inference on Sentinel-2 data to classify small tiles of Sentinel-2
author_email= parham.membari@terradue.com
keywords = inference
license = Apache License, Version 2.0
